# gemini-cli-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.ja.md  README.md  SECURITY.md  dist-workspace.toml  release-plz.toml
.gemini/: config.yaml  styleguide.md
.github/workflows/: ci.yml  release-plz.yml  release.yml
src/: api.rs  context.rs  main.rs  mcp.rs  mcp_http.rs  models.rs
