[package]
name = "gemini-cli-rs"
version = "0.1.3"
edition = "2021"
description = "Gemini CLI written in Rust, optimized for MCP use in Claude Code"
license = "MIT"
repository = "https://github.com/heki1224/gemini-cli-rs"
publish = false

[[bin]]
name = "gemini"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

# Tell cargo-dist to include this binary even though publish = false
[package.metadata.dist]
dist = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
